[gd_scene load_steps=2 format=3 uid="uid://bcspf72jwrp7"]

[ext_resource type="Script" path="res://objects/entity_objects/DE_UI_Elements/entity_name_control/EntityNameControl.gd" id="1_fj7dh"]

[node name="EntityNameControl" type="GridContainer"]
offset_right = 40.0
offset_bottom = 40.0
columns = 2
script = ExtResource("1_fj7dh")

[node name="Label_Type" type="Label" parent="."]
layout_mode = 2
text = "Type:"

[node name="LineEdit_Type" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="Label_Name" type="Label" parent="."]
layout_mode = 2
text = "Name: "

[node name="LineEdit_Name" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[connection signal="text_submitted" from="LineEdit_Name" to="." method="_on_line_edit_name_text_submitted"]
